# axum_auth_server

./: .env  .gitignore  README.md  compose.override.yml  compose.yml  cookies.txt  docker_local.sh
.github/workflows/: prod.yml
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile  Dockerfile.simple  Dockerfile.x86_64_target  api_schema.yml
auth-service/assets/: app.js
auth-service/src/: app_state.rs  lib.rs  main.rs  old_routes.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: hello.rs  login.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: constants.rs  mod.rs
auth-service/tests/api/: droplet_integration.rs  helpers.rs  login.rs  logout.rs  main.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
