[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
validator = "0.20.0"
fake = "4.3.0"
axum-extra = { version = "0.10.1", features = ["cookie"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
dotenvy = "0.15.7"
lazy_static = "1.5.0"


[dev-dependencies]
reqwest = { version = "0.12.22", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
uuid = { version = "1.13.0", features = ["v4"] }
serde_json = "1.0.141"
tokio-test = "0.4.0"
