[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
fake = "4.4.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
lazy-regex = "3.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "migrate",
] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.0", features = ["v4"] }
validator = "0.20.0"
argon2 = { version = "0.5.3", features = ["std"] }
rand_core = "0.9.3"
redis = { version = "0.32.5", features = ["tokio-comp"] }


[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
uuid = { version = "1.13.0", features = ["v4"] }
serde_json = "1.0.143"
tokio-test = "0.4.0"
